--- a/index.html
+++ b/index.html
@@ -4,151 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' href='estilo.css'>
-    <title>La Formula 1</title>
+    <link rel="stylesheet" href="estilo.css">
+    <title>Página Web</title>
 </head>
-<body class="cuerpo">
-    <p>
-        <h1 style="text-align: center;">
-            <div class="h1">
-                F1
-            </div>
-        </h1>
-    </p>
-    <hr/>
-    <p title="segundo parrafo">
-        <h2 style="text-align: center;">
-            <div class="h2">
-            Esta página es una pequeña inrodcucción a este mundo de las carreras que <br>
-            cada año conmociona más y más a espectadores de todo el mundo siendo <br>
-            considerado la categoría mas grande del mundo.
-            </div>
-        </h2>
-        <p align="center">
-            <img src="f1foto.png" alt="Logo de la F1">
-        </p>
-        
-    </p>
-    <hr/>
-        <big>
-        En esta página se podran observar varios apartados para introducirte en este deporte.
-        </big>
-    <ul>
-        <li>Introducción a la historia</li>
-        <li>En la actualidad</li>
-        <li>España en la F1</li>
-        <li>Conclusión</li>
-    </ul>
-    <hr/>
-    <h3>
-        Introducción a la historia
-    </h3><tt class="tt">
-    La historia se remonta por el año <b>1950</b>, y para ser exactos el primer gran premio fue en <i><b>Gran Bretaña</b></i>, en el mñitico circuito de Silverstone.<br>
-    Ganado por el Italiano <u><b>Guiseppe Farina</b></u> donde tambien ese mismo año gano el <i><b>Campeonato de 1950</b></i><br>
-    tras vencer a su propio compañero de equipo, el argentino <b>Juan Manuel Fangio</b>.<br></tt>
-    <hr/>
-    <h3>
-        En la actualidad
-    </h3>
-    A dia de hoy, ha cambiado mucho tanto los monoplazas, como los circuitos e incluso el reglamento y los pilotos y su seguridad. A día de hoy predomina un piloto inglés<br>
-    que va en busca de su 8º Campeonato del Mundo, su nombre es <b>Lewis Hamilton</b> y su palmares habla por si solo consiguiendo en el pasado Gran Premio de Rusia la victoria<br>
-    nº 100 de su carrera. Esta es la clasificación antual de pilotos del campeonato.<br>
-    <table border="1px" align="center" text-align="center">
-        <tr>
-            <th colspan="3"><b>Clasificación de pilotos</b></th>
-        </tr>
-     <tr>
-         <td align="center">
-             Posición
-        </td>
-        <td align="center">
-            Nombre
-        </td>
-        <td align="center">
-            Puntos
-        </td>
-    </tr>
-    <tr>
-        <td align="center">1º</td>
-        <td align="center">Lewis Hamilton</td>
-        <td align="center">246.5 Puntos</td>
-    </tr>
-    <tr>
-        <td align="center">2º</td>
-        <td align="center">Max Verstappen</td>
-        <td align="center">244.5 Puntos</td>
-    </tr>
-    <tr>
-        <td align="center">3º</td>
-        <td align="center">Valtteri Bottas</td>
-        <td align="center">151 Puntos</td>
-    </tr>
-    <tr>
-        <td align="center">4º</td>
-        <td align="center">Lando Norris</td>
-        <td align="center">139 Puntos</td>
-    </tr>
-    <tr>
-        <td align="center">5º</td>
-        <td align="center">Sergio Pérez</td>
-        <td align="center">120 Puntos</td>
-    </tr>
-    </table>
-    <blockquote>
-        Hablemos un poco acerca de Lewis Hamilton, piloto británico cuyo nacimiento fue en Stevenage, Reino Unido en un 7 de enero de 1985, actualmente tiene una edad de 36 años.<br>
-        Su carrera deportiva en la categoría más grande del mundo empezó en el año 2007 y fue en la escudería Mclaren, cuyo compañero de escudería sería el piloto español<br>
-        conocido mundialmente, Fernando Alonso. Ese mismo año, quedó segundo en el Campeonato de Pilotos del año 2007, lo ganó el finlandes Kimi Räikkönen en la última carreca<br>
-        del calendario. El año siguiente se proclamó Campeón del Mundo de la Formula 1 y también como el campeón más joven en ese momento, ya lo demas, es historia.
-    </blockquote>
-    <hr/>
-    <h3>
-        España en la F1<a id="spaindrivers"></a>
-    </h3>
-    Voy a nombrar brevemente algunos pilotos españoles mas conocidos y un breve resumen de su carrera deportiva.
-    <ol type="1">
-        <li>
-            <b>Pedro Martínez de la Rosa.</b> Pedro hizo su debut en 1999, y su carrera se extendió hasta el año 2012 en lo que ha destacar es su podio en el Gran Premio de Hungría<br>
-            de 2006. Actualmente es comentarista en el canal de televisión DAZN y corrió con Arrows, Jaguar, Mclaren, Sauber, HRT y Scuderia Ferrari (como probador).
-        </li>
-        <li>
-            <b>Fernando Alonso.</b> Es el piloto mas exitoso de España en la F1 y actualmente sigue compitiendo en la categoría reina. Debutó en Minardi en el año 2001 y con Renault <br>
-            anoto su primera victoria y sus dos mundiales de F1 (2005 y 2006). Despues de muchos años de subcampeón y fallos con los equipos, Fernando decidió retirarse de la Formula 1<br>
-            para volver en el año 2021 tras ganar las 24 Horas de Le Mans en el año 2018 y 2019 y tras haber participado en las 500 Millas de Indianápolis.
-        </li>
-        <li>
-            <b>Carlos Sainz Jr.</b> Carlos Sainz Jr., hijo del conocido bicampeón del mundo de rally, Carlos Sainz, debutó en la F1 en el año 2015 tras haber ganado el año <br>
-            anterior las World Series by Renault. Fue en el equipo Toro Rosso y pasó por legendarios equipos como Renault, Mclaren y finalmente este año en la Scuderia Ferrari. Carlos <br>
-            a pesar de ser un piloto muy joven, es talentoso y piensa ir a por todo al igual que su padre.
-        </li>
-    </ol>
-    <hr/>
-    <h3>
-        Conclusión
-    </h3>
-    Este deporte ha brindado grandes alegrias a nuestra peninsula y siempre es un agrado ver monoplazas llenos de tecnología en unos circuitos a una velocidad de vértigo.<br>
-    Tambien he escuchado que la Formula 1 es aburrrida y dicen que siempre gana el mismo piloto, y a decir verdad es un deporte apasionante y lleno de amoción hasta el <br>
-    último instante. Una emoción vuelta tras vuelta con mucho drama tanto dentro como fuera de ella
-    <p>
-        <i>"La F1 <strike>no</strike> es <strong>im</strong>predecible"</i>
-    </p>
-    Fuente de búsqueda de datos de esta página <a href="https://es.wikipedia.org/wiki/Fórmula_1" target="_blank">aquí</a><br>
-    También proporcionaré el reglamento de la FIA de las regulaciones técnicas de este año por si te interesa en PDF, click <a href="f1_fia.pdf" target="_blank">aquí</a><br>
-    Ir al <a href="#">inicio de la página</a><br>
-    Ir a <a href="#spaindrivers">pilotos españoles</a>
-    <hr/>
-    <h2>
-        Los pilotos más famosos
-    </h2>
-    <div class="estilohamilton">Lewis Hamilton</div> 
-    <blockquote>
-    Es uno de los pilotos más legendarios de la última epoca teniendo en su palmares una suma de 7 campeonatos del mundo de pilotos estando solo a falta de un campeonato para ser el <br>
-    piloto mas grande de la historia, con una suma de ya 102 victorias en la categoria reina. Un legado sin precendentes.
-    </blockquote>
-    <div class="estilomichael">Michael Schumacher</div>
-    <blockquote>
-    El famoso "Kaiser" de la Formula 1 es uno de los pilotos mas idolatrados de toda la historia por todo lo que cambio este deporte y todo lo que hizo, con 7 campeonatos del mundo en <br>
-    su palmares y con una cantidad abrumadora de records rotos por este piloto, es el mejor de la historia de la Formula 1.
-    </blockquote>
+<body>
+    <div class="foto"><img src="fotomando.png" width="175px"></div>
+    <div class="texto"><h1>+ Que Juegos</h1></div> 
+    <div class="contenido">
+        <h2><a id="aficion">Mi afición por los videojuegos</a></h2>
+        Mi afición acerca de los videojuegos es aproximadamente desde que tengo uso de razón ya que desde pequeño mi padre
+        tenía una PS2 desde donde empecé a conocer este mundo de la mano de grandes títulos de la consola como <strong>Ratchet & Clank</strong>
+        o <strong>Jak 3</strong> desde donde comence a enamorarme de el mundo de lo rodea y todo lo que las desarrolladoras sacan cada año. <p></p>
+        Conforme iban pasando los años iba explorando poco a poco en revistas, foros y videos en una plataforma que empezó a surguir como fue <strong>Youtube</strong>
+        y donde me nutria cada vez más y más de todo lo que le rodeaba y salía a la vente cada año, ya fueran consolas, anuncios o juegos. <p></p>
+        Pasaron los años y fuí creciendo y mis experiencias con los videojuegos, también, mis ganas de seguir jugando y nunca cansarme. La pasión es más allá
+        de jugar y viciarme por pasarlo bien, yo considero que es más como un arte y son aventuras y millones de mundos sin explorar esperandote.
+        <h2><a id="actuales">Juegos Actuales</a></h2>
+        En este apartado ire argumentando cuales han sido mis juegos favoritos actuales y luego volveré a la nostalgia para remarcar los juegos que han marcado mi infancia.
+        <ul>
+            <li><strong>God Of War (2018):</strong> Videojuego desarrollado por Santa Monica Studios y que fue una revolución para una saga y personalmente para mi <br>
+            en uno de los momentos mas duros de mi vida que fue la pandemia, una aventura de acción con una narrativa brutal junto con una banda sonora que pone los <br>
+            pelos de punta a cada paso que das.</li>
+            <br>
+            <li><strong>Kingdom Hearts 3:</strong> Videojuego desarrollado por Square Enix de la mano de Tetsuya Nomura como director que supuso una entrega en una saga esperada <br>
+            donde su "fanbase" alabó este juego tan criticado por periodistas y tan amado por mí. Un videojuego donde mis emociones salieron a flor de piel y me conmovio a cada <br>
+            paso de esta épica y preciosa aventura.</li>
+        </ul>
+        <h2><a id="nostalgia">Juegos Nostálgicos</a></h2>
+        Y continuo con los videojuegos de mi infancia que definieron lo que actualmente soy.
+        <ul>
+            <li><strong>Jak 3:</strong> Culmen de una saga de plataformas y aventuras donde la jugabilidad importaba poco al lado del apasionante desenlace de una saga absolutamente <br>
+            increíble donde nuestro protagonista se vera enfrentado a su futuro y otra vez al destino de su mundo que se ve afectado por una amenaza nunca antes vista. Un juego donde <br>
+            tenías un desierto gigantesco por descubrir subidos a unos vehiculos de combate para sobrevivir a un entorno hostil donde no somos bienvenidos y una ciudad enfrentada <br>
+            que necesita de nuestra ayuda para sobrevivir.</li>
+            <br>
+            <li><strong>Ratchet & Clank:</strong> Juego desarrollado por Imsomniac Games que revolucióno el género de plataformas con un título fresco, destinos inimaginables, <br>
+            entrañables personajes y una banda sonora y jugabilidad absolutamente fresca e innovadora. En este juego somos un alienígena con cuyas intenciones son ser un héroe <br>
+            por todos los planetas. Con un humor absurdo y con personajes carismáticos y con miles de cosas mas este juego siempre sera recordado como uno de los títulos de <br>
+            mi infancia.</li>
+        </ul>
 
+    </div>
+    <div class="bloquederecha">
+        <h2>
+            Índice
+        </h2>
+        <h3><a href="#aficion">
+            Mi afición por los videojuegos
+        </h3></a>
+        <h3><a href="#actuales">
+            Juegos actuales
+        </h3></a>
+        <h3><a href="#nostalgia">
+            Juegos nostálgicos
+        </h3></a>
+        <hr>
+        <h2>Links de interés</h2>
+        <h3>Vida extra<br><a href="https://www.vidaextra.com"><img src="vidaextra.jpg" width="100px"></a></h3>
+        <h3>3DJuegos<br><a href="https://www.3djuegos.com"><img src="3djuegos.png" width="100px"></a></h3>
+    </div>
+   
 </body>
+<div class="pie"><br><p><strong>
+    + Que Juegos <br>
+</strong></p>
+            
+    Página realizada e inspirada basada los gustos de Pablo Castellano Aranda
+    <br><br> 
+    2022® Martos (Jaén)
+    <br>
+    <br>
+    <br>
+</div>
 </html>
